# stackchan-geminicli

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: add-to-project.yml  build.yml  done-on-close.yml  publish.yml
firmware/: AGENTS.md
firmware/docs/: websocket.md  websocket_zh.md
firmware/host_test/: CMakeLists.txt  test_mdns_candidate_extract.cc
firmware/host_test/stubs/: esp_netif_ip_addr.h  mdns.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  mcp_server.h  ota.cc  settings.cc
firmware/scripts/: release.py
gateway/: .env.example  .gitignore  AGENTS.md  LICENSE-THIRD-PARTY  README.md  pyproject.toml
gateway/stackchan_mcp/: __init__.py  audio_input_hook.py  audio_stream.py  capture_server.py  cli.py  esp32_client.py  event_log.py  gateway.py  http_server.py  mcp_router.py  notify.example.yml  notify_config.py  ownership.py  protocol.py  queue.py  server.py  stdio_server.py  tools.py
gateway/tests/: conftest.py  test_audio_input_hook.py  test_audio_stream.py  test_capture_server.py  test_cli.py  test_emoji_expression.py  test_esp32_client.py  test_event_dispatch.py  test_event_log.py  test_gateway.py  test_http_server.py  test_irodori.py  test_mcp_router.py  test_notify_config.py  test_orchestrator.py  test_ownership.py  test_protocol.py  test_send_pcm_audio.py  test_send_pcm_stream.py  test_stackchan_event.py  test_stdio_server.py  test_stt_audio_utils.py  test_stt_framework.py  test_stt_orchestrator.py  (+1 more)
scripts/: stackchan_keep_alive.py  stackchan_notify.py
(+62 files in other folders)
